--- a/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_fst.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_fst.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.monstruos.lab2.FstActivity">
-
-</android.support.constraint.ConstraintLayout>
+        android:orientation="vertical">
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_activity1">
+    </TextView>
+    <ImageView
+            android:id="@+id/fst_act_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:rotation="90"
+            android:layout_gravity="center"
+            android:background="@drawable/ourgod"/>
+</LinearLayout>
