--- a/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_main.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.monstruos.lab2.MainActivity">
-
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
@@ -29,9 +21,33 @@
                         android:id="@android:id/tabcontent"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
+                    <LinearLayout
+                            android:id="@+id/tab1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:text="@string/text_activity1"/>
+                        <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ourgod"/>
+                    </LinearLayout>
+                    <LinearLayout
+                            android:id="@+id/tab2"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                        <ListView
+                                android:id="@+id/main_act_listview"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                        </ListView>
+                    </LinearLayout>
                 </FrameLayout>
             </LinearLayout>
         </TabHost>
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
