--- a/Programming/6_sem (Android)/Lab2/app/src/main/res/layout/activity_first.xml
+++ b/Programming/6_sem (Android)/Lab2/app/src/main/res/layout/activity_first.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:weightSum="1">
 
+    <TextView
+            android:text="@string/first_tab_string"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/textView" android:textSize="24sp"
+            android:textAlignment="center"/>
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
+            android:id="@+id/imageView"/>
 </LinearLayout>
