--- a/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_main.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,12 @@
                                 android:layout_height="wrap_content">
                         </ListView>
                     </LinearLayout>
+                    <LinearLayout
+                            android:id="@+id/tab3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                    </LinearLayout>
                 </FrameLayout>
             </LinearLayout>
         </TabHost>
