--- a/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_fst.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_fst.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/tab1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/text_activity1">
-    </TextView>
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="@string/text_activity1"/>
     <ImageView
-            android:id="@+id/fst_act_image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:rotation="90"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/ourgod"/>
+            android:src="@drawable/ourgod"/>
 </LinearLayout>
