--- a/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_third.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_third.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/tab3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.monstruos.lab2.ThirdActivity">
-
-</android.support.constraint.ConstraintLayout>
+        android:orientation="vertical">
+</LinearLayout>
