--- a/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_fst.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/layout/activity_fst.xml
@@ -5,9 +5,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-    <TextView android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="@string/text_activity1"/>
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/text_activity1"
+            android:textSize="44sp"/>
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
