--- a/Programming/6_sem (Android)/Lab3/app/src/main/res/layout/activity_main.xml
+++ b/Programming/6_sem (Android)/Lab3/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg"
@@ -14,23 +13,22 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
         <TextView
                 android:id="@+id/textView1"
-                android:layout_width="380dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/game_description"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge" android:textAlignment="center"/>
 
         <Button
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="48dp"
                 android:onClick="onClickStartGame"
-                android:text="@string/start_game" />
+                android:text="@string/start_game"/>
 
     </LinearLayout>
 
