--- a/Programming/6_sem (Android)/Monstruos/Lab5/app/src/main/res/layout/activity_main.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab5/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.monstruos.lab2.MainActivity">
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+        <TableLayout android:id="@+id/sqldbtable" android:layout_width="368dp" android:layout_height="495dp"
+                     tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp">
 
-    <TableLayout android:id="@+id/sqldbtable" android:layout_width="368dp" android:layout_height="495dp"
-                 tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp">
-
-    </TableLayout>
-
+        </TableLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
