--- a/Programming/6_sem (Android)/Lab6/app/src/main/res/layout/widget.xml
+++ b/Programming/6_sem (Android)/Lab6/app/src/main/res/layout/widget.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/bg"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:id="@+id/widget_layout">
 
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/view_text"
             android:layout_gravity="center_horizontal|center"
-            android:id="@+id/textView"/>
-
-    <Button
-            android:text="@string/button_text"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/button"/>
+            android:id="@+id/textView" android:textAlignment="center" android:textSize="36sp"/>
 
 </LinearLayout>
