--- a/Programming/6_sem (Android)/Lab6/app/src/main/res/xml/info.xml
+++ b/Programming/6_sem (Android)/Lab6/app/src/main/res/xml/info.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
                     android:minWidth="292dp"
-                    android:minHeight="108dp"
-                    android:updatePeriodMillis="86400000"
+                    android:minHeight="54dp"
+                    android:updatePeriodMillis="0"
                     android:initialLayout="@layout/widget"
+                    android:configure="io.github.fnickru.widget.ConfigActivity"
 />
